--- a/pom.xml
+++ b/pom.xml
@@ -105,6 +105,7 @@
 					<configuration>
 						<suiteXmlFiles>
 							<suiteXmlFile>testng.xml</suiteXmlFile>
+									<suiteXmlFile>./test-output\testng-failed.xml</suiteXmlFile>
 									
 						</suiteXmlFiles>
 					</configuration>
