--- a/pom.xml
+++ b/pom.xml
@@ -105,7 +105,7 @@
 					<configuration>
 						<suiteXmlFiles>
 							<suiteXmlFile>testng.xml</suiteXmlFile>
-									<suiteXmlFile>./test-output\testng-failed.xml</suiteXmlFile>
+							<suiteXmlFile>./target\surefire-reports\testng-failed.xml</suiteXmlFile>
 									
 						</suiteXmlFiles>
 					</configuration>
